# plazza

./: .gitignore  CMakeLists.txt  justfile  plazza
.github/workflows/: checks.yml
src/: Plazza.cpp  Plazza.hpp  main.cpp
src/IPC/: Chausette.hpp  PizzaPipe.hpp  TuyauAPizza.hpp  packets.h
src/core/: Ingredients.hpp  Pizza.cpp  Pizza.hpp
src/kitchen/: Kitchen.cpp  Kitchen.hpp
src/kitchen/cook/: Cook.cpp  Cook.hpp
src/reception/: Reception.cpp  Reception.hpp
src/utils/: Debug.cpp  Debug.hpp  StringUtils.hpp  ThreadSafeQueue.hpp
